--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "curlrequest": "^0.5.1",
     "express": "^4.10.0",
     "jquery": "^2.1.1",
-    "jsdom": "^0.11.1"
+    "jsdom": "^0.11.1",
+    "underscore": "^1.7.0"
   }
 }
